<resources>
    <string name="app_name">Loc Mess</string>
    <string name="button_login">Log in</string>
    <string name="activity_register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_register">Sign up</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_new_user">New to Loc Mess?</string>
    <string name="text_full_name">Full name</string>
    <string name="text_username">Username</string>
    <string name="hint_password_retype">Retype Password</string>
    <string name="login">Login</string>
    <string name="new_post">New Post</string>
    <string name="posts">Posts</string>
    <string name="main_page">Main Page</string>
    <string name="post_information">Post Information</string>
    <string name="google_android_map_api_key">AIzaSyDd_A-gZ4uuIMnUhLItYP9db4YGSIhUIwk</string>
    <string name="addNote">Add Note</string>
    <string name="logout">Log out</string>
    <string name="action_profile">View Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_profile">User Profile</string>
    <string name="create_location">Create Location</string>
    <string name="locationName">Location\'s Name</string>
    <string name="detailed_post">Detailed Post</string>
    <string name="addPostText">Create Post</string>
    <string name="createLocation">Create Location</string>
    <string name="title">Title</string>
    <string name="write_message">Write Message</string>
    <string name="filter">Filter</string>
    <string name="whitelist">Whitelist</string>
    <string name="blacklist">Blacklist</string>
    <string name="keyEditxText">Key</string>
    <string name="valueEditText">Value</string>
    <string name="properties">Properties</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="locations">Locations</string>
    <string name="wifi">WiFi IDs</string>
    <string name="gps">GPS</string>
    <string name="available_networks">Available Networks</string>
    <string name="SSID">SSID</string>
    <string name="warning">Are you sure you want to delete all the Custom Networks?</string>
    <string name="pickTime">Pick time</string>
    <string name="pickDate">Pick date</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="warning_location">Are you sure you want to delete this location?</string>
    <string name="warning_unpost_post">Are you sure you want to unpost this post?</string>
    <string name="warning_delete_post">Are you sure you want to delete this post?</string>
    <string name="decentralized">Decentralized</string>
    <string name="centralized">Centralized</string>
    <string name="mode">Mode</string>
    <string name="editLocation">Edit</string>
    <string name="deleteLocation">Delete</string>
    <string name="viewLocation">View</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="permission_required_toast">Permission is required</string>
    <string name="permission_rationale_location">Permission rationale Location</string>
    <string name="lng">Longitude: </string>
    <string name="lat">Latitude: </string>
    <string name="radius">Radius: </string>
    <string name="ssid">SSID: </string>

    <string-array name="keys">
        <item>Team</item>
        <item>University</item>
        <item>Food</item>
        <item>Movie</item>
        <item>Brand</item>
        <item>Computer</item>
    </string-array>

</resources>

