<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:visibility="visible"></android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_weight="0.20" />

    <EditText
        android:id="@+id/editText_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_password_retype_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_password_retype"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_register_register"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:onClick="registerButton"
        android:text="@string/button_register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_register_cancel"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:onClick="cancel"
        android:text="@string/button_cancel"
        android:textColor="@android:color/white" />


</LinearLayout>